--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,16 +1,21 @@
 {
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
+    "axios": "^1.9.0",
+    "expo-image-picker": "~16.0.6",
+    "expo-router": "^4.0.20",
     "react-native-gesture-handler": "^2.24.0",
     "react-native-reanimated": "^3.17.1",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
-    "@types/react-native-snap-carousel": "^3.8.11"
+    "@types/react-native-snap-carousel": "^3.8.11",
+    "typescript": "^5.3.3"
   }
 }
